<resources>
    <string name="app_name">ProyectoBootcamp</string>
    <string name="login_title">OnlineBook</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_clave">Clave</string>
    <string name="boton_texto">INGRESAR</string>
    <string name="login_registrase"><u>¿Eres nuevo? Regístrate</u></string>
    <string name="login_olvido_clave"><u>Olvidé mi contraseña</u></string>
    <string name="registro_title">Registro</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_confirmar_clave">Confirmar Clave</string>
    <string name="aceptar_terminos">Acepto términos y condiciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_pregunta_secreta">Cuál es su película favorita</string>
    <string name="text_pregunta_secreta">Pregunta secreta :</string>
    <string name="olvido_clave_title">Olvidé Clave</string>
    <string name="txt_usuario">Ingrese su usuario :</string>
</resources>