<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/img_book"
        app:civ_border_width="4dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_usuario"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_user"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_clave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_clave"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_key"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/til_usuario"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_clave"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_texto"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_shape"
        android:padding="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/til_clave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_registrase"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login_olvido_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_olvido_clave"
        android:textSize="15sp"
        android:textStyle="italic"
        android:fontFamily="serif"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>