<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>

    <TextView
        android:id="@+id/registro_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/registro_title"
        android:textSize="35sp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        app:endIconMode="clear_text"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/registro_title"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_usuario"
        app:endIconMode="clear_text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/til_nombre"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_clave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_clave"
        app:endIconMode="clear_text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/til_usuario"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_clave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirmar_clave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirmar_clave"
        app:endIconMode="clear_text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/til_clave"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirmar_clave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_terminos_condiciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aceptar_terminos"
        android:textStyle="italic"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/til_confirmar_clave"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_shape"
        android:padding="15dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/cb_terminos_condiciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>