<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OlvideClaveActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>

    <TextView
        android:id="@+id/olvido_clave_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/olvido_clave_title"
        android:textColor="@color/purple_700"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_usuario"
        android:layout_marginTop="100dp"
        android:textSize="15sp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/olvido_clave_title"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_usuario"
        app:endIconMode="clear_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tx_usuario"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tx_pregunta_secreta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_pregunta_secreta"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/til_usuario"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pregunta_secreta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pregunta_secreta"
        app:endIconMode="clear_text"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tx_pregunta_secreta"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pregunta_secreta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recuperar_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recuperar clave"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_shape"
        android:padding="15dp"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toBottomOf="@id/til_pregunta_secreta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>